--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -26,7 +26,9 @@ collections: # A list of collections the CMS should be able to edit
           - {label: "Por qué - Explicación" , name: porqueExplicacion, widget: string}
           - {label: "Motivos", name: porqueMotivos, widget: object, fields: [
               {label: "Título", name: "titulo", widget: string},
-              {label: "Imagen", name: "imagen", widget: "image"}]}
+              {label: "Imagen", name: "imagen", widget: "image"}
+              ]
+            }
       - file: "site/content/contact/_index.md"
         label: "Contact Page"
         name: "contact"
