Refactorizando home y deshardcodeando por qué

--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -25,7 +25,7 @@ collections: # A list of collections the CMS should be able to edit
           - {label: "Por qué - Título" , name: porque, widget: string}
           - {label: "Por qué - Explicación" , name: porqueExplicacion, widget: string}
           - {label: "Motivos", name: porqueMotivos, widget: object, fields: [
-              {label: "Título", name: "titulo", widget: string},
+              {label: "Titulo", name: "titulo", widget: string},
               {label: "Imagen", name: "imagen", widget: "image"}
               ]
             }
