Refactorizando home y deshardcodeando por qué

--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -24,8 +24,9 @@ collections: # A list of collections the CMS should be able to edit
         fields:
           - {label: "Por qué - Título" , name: porque, widget: string}
           - {label: "Por qué - Explicación" , name: porqueExplicacion, widget: string}
-          - {label: "Motivos", name: porqueMotivos, widget: object, fields: [
+          - {label: "Motivos", name: porqueMotivos, widget: list, fields: [
               {label: "Titulo", name: "titulo", widget: string},
+              {label: "Imagen", name: "imagen", widget: "image"}
               ]
             }
       - file: "site/content/contact/_index.md"
