--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -29,9 +29,9 @@ collections: # A list of collections the CMS should be able to edit
               {label: "Imagen", name: "imagen", widget: "image"}
               ]
             }
-          - {label: "Servicios - Título" , name: porque, widget: string}
-          - {label: "Servicios - Explicación" , name: porqueExplicacion, widget: string}
-          - {label: "Servicios", name: porqueExplicacion, widget: list, fields: [
+          - {label: "Servicios - Título" , name: servicios, widget: string}
+          - {label: "Servicios - Explicación" , name: serviciosExplicacion, widget: string}
+          - {label: "Servicios", name: serviciosListado, widget: list, fields: [
               {label: "Titulo", name: "titulo", widget: string},
               {label: "Explicacion", name: "explicacion", widget: string}
               ]
