--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -17,6 +17,16 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Intro Blurb", name: "description", widget: "text"}
       - {label: "Image", name: "image", widget: "image", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
+  - name: "servicio"
+    editor:
+      preview: false
+    label: "Servicios" # Used in the UI, ie.: "New Post"
+    folder: "site/content/servicio" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    fields: # The fields each document in this collection have
+      - {label: "Nombre", name: "nombre", widget: "string"}
+      - {label: "Descripcion", name: "descripcion", widget: "markdown"}
+      - {label: "Imagen", name: "imagen", widget: "image", required: false}
   - name: "pages"
     editor:
       preview: false
