--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -23,6 +23,7 @@ collections: # A list of collections the CMS should be able to edit
     label: "Servicios" # Used in the UI, ie.: "New Post"
     folder: "site/content/servicio" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
+    identifier_field: nombre
     fields: # The fields each document in this collection have
       - {label: "Nombre", name: "nombre", widget: "string"}
       - {label: "Descripcion", name: "descripcion", widget: "markdown"}
