--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -29,6 +29,11 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Intro", name: "description", widget: "text"}
       - {label: "Imagen", name: "imagen", widget: "image", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Claves", name: claves, widget: list, fields: [
+              {label: "Titulo", name: "titulo", widget: string},
+              {label: "Icono", name: "icono", widget: select, options: ["gym","gym-1", "gym-2", "milk-products","users","chat","handshake","maps-and-flags","note","nutrition","cardiogram","runner","waist","running"]}
+              ]
+        }
   - name: "pages"
     editor:
       preview: false
